# xai-on-the-wall

./: .gitignore  README.md  config.py  config.yaml  ga_best_by_gen.csv  main.ipynb  main.py  model.pth  model_e.pth  model_good.pth  model_ok.pth  pyproject.toml  tmp.py  train.py  xai_results_20251210_100252.txt
dexire/: dexire.py
dexire-exo/: ga_engine.py
dexire/adapters/: model_adapter.py  pytorch_adapter.py  tensorflow_adapter.py
dexire/core/: clause.py  expression.py  rule.py  rule_set.py
dexire/rule_extractors/: one_rule_extractor.py  tree_rule_extractor.py
dexire/utils/: dexire_visualization.py  probabilistic_ranking.py
dexire_evo/: LICENSE  ga_engine.py  operators.py  rule_formatter.py
dexire_exo/: ga_engine.py
explainer/: ciu.py  dexire.py  dexire_evo.py  dexire_exo.py
gradio_ui/: logic.py  save_manager.py
src/: config.py  load_data.py  model.py  model_adapter.py  model_builder.py  preprocess.py  rules_parser.py  train.py
tests/: test_data_loading.py  test_explainability.py  test_model_training.py
