[project]
name = "xai-on-the-wall"
version = "0.1.0"
description = "XAI on the wall, who is the explainer of them all?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.3",
    "dill>=0.4.0",
    "gradio>=6.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "wandb>=0.23.0",
]

[tool.uv]
package = true
